# ddns_local_server

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CI_COMPATIBILITY.md  CLEAN_ARCHITECTURE.md  CLI_TESTING.md  Cargo-current.toml  Cargo-rust170.toml  Cargo.toml  DEBIAN12_COMPATIBILITY.md  DEBIAN_PACKAGE.md  DOCKER.md  Dockerfile.debian12  INTERACTIVE_INSTALLATION.md  OPENSSL_FIX.md  PERSISTENT_STORAGE.md  PLANTUML_FIX.md  README.md  RELEASE_NOTES_v1.2.6.md  RELEASE_NOTES_v1.2.7.md  RELEASE_NOTES_v1.2.8.md  RELEASE_v1.2.2.md  TESTING.md  build-deb.sh  build-debian12-strict.sh  build-debian12.sh  test-deb-install.sh  test_ip_replacement.rs
.cargo/: config.toml
.github/: SETUP_SUMMARY.md  WORKFLOWS.md  dependabot.yml  markdown-link-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
debian/: README.md  changelog  control  copyright  ddns-updater.postrm.debhelper  postinst  postrm  prerm  rules
docs/: AUTOMATED_RELEASES.md  README.md
scripts/: README.md  check_formatting.sh  fix-docker-permissions.sh  fix-storage-permissions.sh  fix_quality.sh  generate-diagrams.sh  test_all.sh  test_cli.sh  test_cli_simple.sh  test_position_and_non_addition.sh
src/: lib.rs  main.rs  network.rs  nginx.rs
systemd/: CONFIGURATION_DISPLAY.md  README.md  SYSTEMD.md  ddns-backup-cleanup.service  ddns-backup-cleanup.sh  ddns-backup-cleanup.timer  ddns-updater.service  ddns-updater.target  ddns-updater.timer  ddns-updater@.service  ddns-updater@.timer  install-systemd-advanced.sh  install-systemd.sh  show-config.sh  uninstall-systemd.sh
test_configs/: README.md
test_storage/: google.com.json
tests/: cli_integration_test.rs
(+57 files in other folders)
