[package]
name = "ddns_updater"
version = "1.0.0"
edition = "2024"
default-run = "ddns_updater"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
