[package]
name = "ddns_updater"
version = "1.2.2"
edition = "2021"  # Use 2021 edition for better compatibility
default-run = "ddns_updater"
rust-version = "1.82"  # Specify minimum Rust version for Debian 12

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.71"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"] }
regex = "1.9.0"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false }
url = "2.4.0"
thiserror = "1.0.44"
# Email notification dependencies
lettre = { version = "0.11.18", default-features = false, features = ["tokio1-rustls-tls"] }

[dev-dependencies]
tempfile = "3.6.0"
tokio-test = "0.4.3"

# Build configuration for Debian 12 (libc 2.36-9+deb12u10) compatibility
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "ddns_updater"
path = "src/main.rs"